--- a/Ben.html
+++ b/Ben.html
@@ -124,7 +124,9 @@
             <div class="col-md-6  text-white">
                 <p>
                     上市資訊公司派遣 富邦銀行新興ETE流程暨帳務優化系統
-                    <br>VPN APP 開發
+                    <br>某公司勞資系統 開發 .Net 
+                    <br>VPN APP 開發 Flutter 工具
+                    <br>線上 ERP 開發 .Net Core
                     <br>進銷存線上管理系統
                     <br>WMS API 串接
                 </p>
